--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -18,15 +18,14 @@ block content
           img.teacher-profile-img(src=teacher.image)
         .col-xs-12.col-sm-10
           b Liked by _% of students.
-      .row
-        .col-xs-12
-          hr
-          button.btn.btn-success Like   
-          button.btn.btn-danger Dislike
+      
+      hr
+      .col-xs-12.col-sm-6
+        
+        button.btn.btn-success.disabled(title="This is not one of your teachers!") Like   
+        button.btn.btn-danger.disabled(title="This is not one of your teachers!") Dislike
     
-    .row
-      .col-xs-12
-        hr
-        if teacher != false
-          a.btn.btn-default(href="http://moodle.regis.org/user/profile.php?id="+teacher.mID, target="_blank") Moodle Page
-        a.btn.btn-primary(href="/teachers") Back to Teachers
+    .col-xs-12.col-sm-6
+      if teacher != false
+        a.btn.btn-default.right(href="http://moodle.regis.org/user/profile.php?id="+teacher.mID, target="_blank") Moodle Page
+      a.btn.btn-primary.right(href="/teachers") Back to Teachers
