Minor fixes and improvements
- Moved passwords to separate file with weak protection
- More view improvements

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,10 +10,14 @@ block content
 
 
     .row
-      .col-xs-12
-
+      .col-xs-12.col-sm-4
         img.panel.panel-default(style="width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
-
+      .col-xs-12.col-sm-8
+        .panel.panel-primary
+          .panel-heading
+            h1.panel-title Statistics
+          .panel-body
+            span The 2016 school year will start in #{full_year} days.
     .row
       .col-xs-12
         .progress
