--- a/views/chatpage.jade
+++ b/views/chatpage.jade
@@ -6,4 +6,4 @@ block content
       
   form#chat-controls.form-inline(role="form", style="position: fixed; left: 0; bottom: 50px;")
     input.form-control#chat-message(type="text", name="message", style="width: 80%;")
-    button#send-message.btn.btn-primary(type="button", style="width: 20%;") Send
+    button#send-message.btn.btn-primary(type="button", style="width: 20%;", data-username=currentUser.username) Send
