--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,7 +27,7 @@ html
     link(rel="stylesheet", href="/css/all.css")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
     script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js")
-    script(src="javascripts/jquery.tooltipster.min.js")
+    script(src="/javascripts/jquery.tooltipster.min.js")
 
     link(rel="stylesheet", href="/css/tooltipster.css")
     link(rel="stylesheet", href="/css/themes/tooltipster-shadow.css")
