Added HWItem schema and model

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -215,6 +215,18 @@ main {
 
 /* Homework Pages */
 
+#hw-info {
+  font-size: 1.1em;
+}
+
+#hw-info a {
+  font-weight: 570;
+}
+
+#hw-info a:hover {
+  text-decoration: none;
+}
+
 #newItemSubject{
   max-width: 30%;
 }
