--- a/views/days/one.jade
+++ b/views/days/one.jade
@@ -12,10 +12,12 @@ block content
       .row
         .col-xs-12.text-center
           if day != false
-            b#schedule-day= day.scheduleDay 
-      
+            b#schedule-day #{day.scheduleDay}-Day 
+          else
+            b#schedule-day Click to set a Schedule Day!
+            
       p#hw-info.text-center
-        | On this #[b= date.format("dddd")], you have #[a(href="#homework", style="color: #2780e3;") 0 homework] assignments 
+        | On this #[b= date.format("dddd")], you have #[a(href="#homework", style="color: #2780e3;")= (items.homework ? items.homework.length : 0) + " homework"] assignments 
         | to complete, #[a(href="#tests", style="color: #f0005e;") 0 tests] to take, #[a(href="#quizzes", style="color: #7643a8;") 0 quizzes] to take, and 
         | #[a(href="#projects", style="color: #ff4309;") 0 projects] due.
       
@@ -39,16 +41,24 @@ block content
           .col-xs-12.text-center
             //b Items
         
-        .col-xs-12.text-center
-          if !work.homework
-            h4 No homework!
-            -for(var i=0;i<2;i++)
+        .row
+          for title in hwTitles
+            .col-xs-12.col-md-6.hw-item.text-center
+              a.title(href="/courses/"+homework[title][0].course.mID)= title
+              ol
+                for item in homework[title]
+                  li
+                    span(class="assignment"+(item.completed == true ? " completed" : ""))= item.desc+" "
+                    i.fa.fa-close.remove-assignment
+                    span  &nbsp;  &nbsp;  &nbsp;
               br
-          form.form-inline#homework-form(method="GET", role="form")
-            select.form-control(id="newItemSubject", name="newItemSubject", required=true)
+        br
+        .row
+          form.form-inline#homework-form(method="POST", action="/days/"+date.format('YYYY-MM-DD')+"/homework?sd=B", role="form")
+            select.form-control(id="newHWItemCourse", name="newHWItemCourse", required=true)
               for course in currentUser.courses
                 option(value=course.mID)= course.title
-            input.form-control(id="newItemDesc", name="newItemDesc", type="text", placeholder="Description", required=true)
+            input.form-control(id="newHWItemDesc", name="newHWItemDesc", type="text", placeholder="Description", required=true)
             button.btn.btn-primary.full-when-xs#homework-button Add
         
       -for(var i=0;i<6;i++)
@@ -63,7 +73,7 @@ block content
             //b Items
         
         .col-xs-12.text-center
-          if !work.tests
+          if !items.tests
             h4 No tests!
             -for(var i=0;i<4;i++)
               br
