It's almost 4AM I have no idea what I did

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -266,3 +266,13 @@ main {
     max-width: 100%;
   }
 }
+
+// Tweet
+
+.timeline {
+  max-with: 320px;
+}
+
+.timeline .stream {
+  max-height: 400px;
+}
