--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -9,7 +9,7 @@ block content
       span You have either entered an invalid username or the user has not registered yet.
     else
       .page-header
-        h1.center-xs #[b= user.gradeName+" "+user.rankName] #[br.visible-xs] #{user.fullName}
+        h1.center-xs #[b= user.gradeName] #[br.visible-xs] #{user.fullName}
           small.right.hidden-xs.hidden-sm #{user.points} points
       .user-profile
         .col-xs-12.col-sm-6.col-lg-8
