--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -2,6 +2,7 @@ extends /layout
 
 block content
   .container
+    include /info
     if teacher == false
       .page-header
         h1 That teacher does not exist!
